Se modificaron estilos y se configuro para que sea responsivo

--- a/src/app/component/acerca-de/acerca-de.component.css
+++ b/src/app/component/acerca-de/acerca-de.component.css
@@ -41,3 +41,8 @@ button {margin: 20px; width: 100%;}
     justify-content: center;
     width: 100%
 }
+
+@media only screen and (max-width: 920px) {
+    #imagen {display: none}
+    #sobre-mi {padding: 40px}
+}
