--- a/src/app/component/skills/skills.component.html
+++ b/src/app/component/skills/skills.component.html
@@ -5,6 +5,8 @@
             <input type="text" ngModel name="nombre" id="nombre">
             <label for="img">Url imagen:</label>
             <input type="text" ngModel name="img" id="img">
+            <label for="url">Url documentacion:</label>
+            <input type="text" ngModel name="url" id="url">
         </div>
         <button>Agregar</button>
     </form>
